--- a/projects/ngx-tribute/package.json
+++ b/projects/ngx-tribute/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ladder/ngx-tribute",
+  "name": "ngx-tribute",
   "version": "1.0.0",
   "peerDependencies": {
     "@angular/common": "^6.0.0-rc.0 || ^6.0.0",
