fix: build scripts on windows

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "build-lib": "ng build --prod ngx-tribute && cp README.md dist/ngx-tribute",
-    "build-demo": "npm run build-lib && ng build ngx-tribute-app && rm -rf docs && cp -rf dist/ngx-tribute-app docs && bin/replaceBase.js",
+    "build-lib": "ng build --prod ngx-tribute && cpy README.md dist/ngx-tribute",
+    "build-demo": "npm run build-lib && ng build ngx-tribute-app && rimraf docs && cpy dist/ngx-tribute-app docs && node bin/replaceBase.js",
     "publish-package": "npm run build-lib && cd dist/ngx-tribute && npm publish"
   },
   "private": true,
@@ -38,6 +38,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.2.1",
+    "cpy-cli": "^2.0.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma-chrome-launcher": "~2.2.0",
@@ -46,6 +47,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "ng-packagr": "^3.0.0",
     "protractor": "~5.4.0",
+    "rimraf": "^2.6.3",
     "ts-node": "~5.0.1",
     "tsickle": ">=0.29.0",
     "tslib": "^1.9.0",
