upgrade lib dependencies to angular v8

--- a/projects/ngx-tribute/package.json
+++ b/projects/ngx-tribute/package.json
@@ -2,9 +2,9 @@
   "name": "ngx-tribute",
   "version": "1.4.1",
   "peerDependencies": {
-    "@angular/common": "^6.0.0-rc.0 || ^6.0.0",
-    "@angular/core": "^6.0.0-rc.0 || ^6.0.0",
-    "@angular/forms": "^6.0.0-rc.0 || ^6.0.0",
+    "@angular/common": ">=6.0.0 <9.0.0",
+    "@angular/core": ">=6.0.0 <9.0.0",
+    "@angular/forms": ">=6.0.0 <9.0.0",
     "tributejs": "^3.3.5"
   },
   "description": "Angular 2+ library for @mentions. Supports contenteditable and Reactive Forms.",
